# Player-journey-intelligence

./: .gitignore  README.md  main.py  pyproject.toml
dbt_project/: .gitignore  profiles.yml
docs/: kpi_framework_v1_EN.md
