[project]
name = "player-journey-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "dbt-core>=1.12.0",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "kaggle>=2.2.3",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pyarrow>=25.0.0",
    "sqlfluff>=3.4.0",
]
